# cookoff

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: index.ts  main.rs
src/views/: home.handlebars
src/views/layouts/: main.handlebars
templates/: index.html.hbs
