[package]
name = "cookoff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = { version = "1.0.147" }
serde_json = "1.0.89"
reqwest = { version = "0.11.13", features = ["json"] }
postgrest = "1.0"